syntax = "proto3";
package tbc.tbc;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "tbc/params.proto";
import "tbc/creator_coin.proto";
// this line is used by starport scaffolding # 1

option go_package = "tbc/x/tbc/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tbc/tbc/params";
  }
  // Queries a CreatorCoin by index.
	rpc CreatorCoin(QueryGetCreatorCoinRequest) returns (QueryGetCreatorCoinResponse) {
		option (google.api.http).get = "/tbc/tbc/creator_coin/{index}";
	}

	// Queries a list of CreatorCoin items.
	rpc CreatorCoinAll(QueryAllCreatorCoinRequest) returns (QueryAllCreatorCoinResponse) {
		option (google.api.http).get = "/tbc/tbc/creator_coin";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCreatorCoinRequest {
	  string index = 1;

}

message QueryGetCreatorCoinResponse {
	CreatorCoin creatorCoin = 1 [(gogoproto.nullable) = false];
}

message QueryAllCreatorCoinRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCreatorCoinResponse {
	repeated CreatorCoin creatorCoin = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
